crates/mpl-ide/tests/snapshots/analysis__completes_align_params.snap
---
source: crates/mpl-ide/tests/analysis.rs
expression: "completions_snapshot(\"from prod:requests | align \", Position::new(0, 27),\n\"$__interval\",)"
---
SOURCE:

1 │ from prod:requests | align
  ·                            ┬
  ·                            ╰ $__interval ←

EDITED:

1 │ from prod:requests | align $__interval
