crates/mpl-ide/tests/snapshots/analysis__completes_map_functions_directly.snap
---
source: crates/mpl-ide/tests/analysis.rs
expression: "completions_snapshot(\"from prod:requests | map \", Position::new(0, 25),\n\"rate\",)"
---
SOURCE:

1 │ from prod:requests | map
  ·                          ┬
  ·                          ╰ rate        ←
  ·                            increase
  ·                            abs
  ·                            fill::prev
  ·                            fill::const
  ·                            filter::lt
  ·                            filter::gt
  ·                            filter::eq
  ·                            filter::ne
  ·                            filter::ge
  ·                            filter::le
  ·                            is::lt
  ·                            is::gt
  ·                            is::eq
  ·                            is::ne
  ·                            is::ge
  ·                            is::le

EDITED:

1 │ from prod:requests | map rate
