crates/mpl-ide/tests/snapshots/analysis__completes_partial_pipe_keywords_before_existing_code.snap
---
source: crates/mpl-ide/tests/analysis.rs
expression: "completions_snapshot(\"from prod:requests | m    rate\", Position::new(0, 22),\n\"map\",)"
---
SOURCE:

1 │ from prod:requests | m    rate
  ·                       ┬
  ·                       ╰ map ←

EDITED:

1 │ from prod:requests | map    rate
